# django-blog

./: .gitignore  pip_requirements.txt  pyproject.toml  setenv.sh.example
mysite/: db.sqlite3
mysite/accounts/: forms.py  models.py  signals.py  urls.py  views.py
mysite/blog/: admin.py  forms.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
mysite/blog/templates/: pagination.html
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: comment.html  detail.html  list.html  search.html
mysite/blog/templatetags/: blog_tags.py
mysite/blog_api/: permissions.py  serializers.py  urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/templates/registration/: login.html  signup.html
